@@ -15,7 +15,8 @@ subjectProfileIntervalPlot(data, paramVar, paramVarSep = " - ",
   labelVars), collapse = "/"), yLab = "", colorVar = NULL,
   colorLab = getLabelVar(colorVar, labelVars = labelVars),
   colorPalette = NULL, title = paramLab, label = title,
-  labelVars = NULL, formatReport = subjectProfileReportFormat())
+  labelVars = NULL, formatReport = subjectProfileReportFormat(),
+  paging = TRUE)
 }
 \arguments{
 \item{data}{data.frame with data}
@@ -79,6 +80,9 @@ in the text when the plots are combined (e.g. if the plot is empty).}
 
 \item{formatReport}{list with parameters used to specify the format of the report,
 e.g. output of the \code{\link{subjectProfileReportFormat}} function}
+
+\item{paging}{Logical, if TRUE (by default), the automatic 
+paging is enabled, otherwise only one page is used.}
 }
 \value{
 list of (across subjects) of list (across modules) of \code{\link[ggplot2]{ggplot2} objects}, 
